--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- IcoFont -->
     <link rel="stylesheet" href="icofont/icofont.css">
 
+    <!-- AOS Css -->
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+
     <!-- Main Css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -246,25 +249,30 @@
 
         <!-- team -->
         <div class="team">
+            <h2>The Team</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="card">
-
+                        <img src="img/Marek_headshot2.jpg" alt="" class="team-img">
+                        <p class="name">Marek Laskowski<br><span>Advisor</span></p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-
+                        <img src="img/image.png" alt="" class="team-img">
+                        <p class="name">Katongole Allan<br><span>Head Technical Training</span></p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-
+                        <img src="img/image (1).png" alt="" class="team-img">
+                        <p class="name">Akinnusotu Temitayo Daniel<br><span>Student-Mentor Relations</span></p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-
+                        <img src="img/image (2).png" alt="" class="team-img">
+                        <p class="name">Awosika Israel Ayodeji<br><span>Program Design/Coordinator</span></p>
                     </div>
                 </div>
             </div>
@@ -272,6 +280,7 @@
 
         <!-- trusted -->
         <div class="trusted">
+            <h2>Trusted By</h2>
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/gitcoin.png" alt="" class="tr-img">
@@ -334,9 +343,9 @@
             </div>
             <hr>
             <div class="d-flex justify-content-around font">
-                <i class="ion-social-facebook"></i>
-                <i class="ion-social-twitter"></i>
-                <i class="ion-social-youtube"></i>
+                <a href="#"><i class="ion-social-facebook"></i></a>
+                <a href="https://twitter.com/web3bridge"><i class="ion-social-twitter"></i></a>
+                <a href="#"><i class="ion-social-youtube"></i></a>
             </div>
         </div>
 
@@ -360,6 +369,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- AOS Js -->
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    
     <!-- Main js -->
     <link rel="stylesheet" href="js/main.js">
 
