--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- IcoFont -->
     <link rel="stylesheet" href="icofont/icofont.css">
 
-    <!-- AOS Css -->
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <!-- Animate Css -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
 
     <!-- Main Css -->
     <link rel="stylesheet" href="css/style.css">
@@ -59,7 +59,7 @@
         </div> -->
 
         <!-- vision -->
-        <div class="vision">
+        <div class="vision animate__animated animate__backInDown">
             <h2>Our Vision</h2>
             <div class="row vis">
                 <div class="col-md-6 icon">
@@ -147,18 +147,24 @@
                 <div class="col-md-6 ach">
                     <h2>Achievement</h2>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <span class="numb">
                                 273
                             </span>
                             <p class="text">Introduced to web3 in 9 months</p>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <span class="numb">
                                 34
                             </span>
                             <p class="text">Onboarded, coding, open source contributors, participating in hacks and &
                                 working for various blockchain teams.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="numb">
+                                3
+                            </span>
+                            <p class="text">Full completed Dapps</p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +174,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <span class="numb">
-                                100
+                                1000
                             </span>
                             <p class="text">Active web3bridge community members and partners in Africa by 2023</p>
                         </div>
@@ -368,9 +374,6 @@
     <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- AOS Js -->
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
     
     <!-- Main js -->
     <link rel="stylesheet" href="js/main.js">
