--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
 
         <!-- timeline -->
-        <div class="timeline">
+        <!-- <div class="timeline">
             <h2>Program Timeline</h2>
             <main>
                 <p class="time"><span>Pre-Content(2 - Weeks)</span><br>
@@ -139,7 +139,7 @@
                     projects as startups.
                 </p>
             </main>
-        </div>
+        </div> -->
 
         <div class="target">
             <div class="row">
