--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="header">
             <div class="row">
                 <div class="col-md-6">
-                    <h2><span class="bold">LEARN</span> and <span class="bold">NETWORK</span> at Web3 Bridge</h2>
+                    <h2><span class="bold">LEARN</span> and <span class="bold">NETWORK</span> at Web3Bridge</h2>
                     <p><span class="bold2">MISSION:</span> To identify web3 passions, train them in a collaborative and
                         supportive remote environment and create an African web3 community.</p>
                     <button class="btn reg-btn">Register</button>
@@ -56,7 +56,7 @@
         </div> -->
 
         <!-- vision -->
-        <div class="vision animate__animated animate__backInDown">
+        <div class="vision animate__animated animate__fadeIn">
             <h2>Our Vision</h2>
             <div class="row vis">
                 <div class="col-md-6 icon">
@@ -138,7 +138,7 @@
             </main>
         </div> -->
 
-        <div class="target">
+        <div class="target animate__animated animate__fadeIn">
             <div class="row">
                 <!-- Achievment -->
                 <div class="col-md-6 ach">
@@ -256,6 +256,12 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="card">
+                        <img src="img/image (2).png" alt="" class="team-img">
+                        <p class="name">Awosika Israel Ayodeji<br><span>Program Design/Coordinator</span></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
                         <img src="img/Marek_headshot2.jpg" alt="" class="team-img">
                         <p class="name">Marek Laskowski<br><span>Advisor</span></p>
                     </div>
@@ -270,12 +276,6 @@
                     <div class="card">
                         <img src="img/image (1).png" alt="" class="team-img">
                         <p class="name">Akinnusotu Temitayo Daniel<br><span>Student-Mentor Relations</span></p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="img/image (2).png" alt="" class="team-img">
-                        <p class="name">Awosika Israel Ayodeji<br><span>Program Design/Coordinator</span></p>
                     </div>
                 </div>
             </div>
