--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="col-md-3">
                     <div class="card">
                         <img src="img/image.png" alt="" class="team-img">
-                        <p class="name">Katongole Allan<br><span>Head Technical Training</span></p>
+                        <p class="name">Katongole Allan<br><span>Head, Technical Training</span></p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -269,7 +269,7 @@
                 <div class="col-md-3">
                     <div class="card">
                         <img src="img/image (2).png" alt="" class="team-img">
-                        <p class="name">Awosika Israel Ayodeji<br><span>Program Design/Coordinator</span></p>
+                        <p class="name">Awosika Israel Ayodeji<br><span>Program Designer/Coordinator</span></p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -346,7 +346,7 @@
             </div>
             <hr>
             <div class="d-flex justify-content-around font">
-                <a href="#"><i class="ion-social-facebook"></i></a>
+                <!-- <a href="#"><i class="ion-social-facebook"></i></a> -->
                 <a href="https://twitter.com/web3bridge"><i class="ion-social-twitter"></i></a>
                 <a href="#"><i class="ion-social-youtube"></i></a>
             </div>
